k8s/main-server-service.yml
kind: Service
apiVersion: v1
metadata:
  name: main-server-service
spec:
  selector:
    app: main-server
  type: ClusterIP
  # type: NodePort
  ports:
    - name: main-server-http
      port: 80
      targetPort: 3000
      # nodePort : 30080
